<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_marginTop="40dp"
    android:layout_height="200dp">

        <LinearLayout
            android:layout_height="40dp"
            android:layout_width="match_parent"
            android:layout_marginTop="80dp"
            android:orientation="horizontal">

            <ToggleButton
                android:id="@+id/toggleButtonSolicitado"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_border_button"
                android:textOn="@string/estado_solicitado"
                android:textOff="@string/estado_solicitado"
                android:gravity="center"
                android:padding="8dp"
                android:drawablePadding="8dp"
                android:layout_marginEnd="14dp"
                android:layout_marginStart="18dp"
                android:button="@null"
                android:textColor="?attr/colorControlNormal"
                android:textAllCaps="false"
                android:checked="false"/>

            <ToggleButton
                android:id="@+id/toggleButtonPreparado"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:background="@drawable/rounded_border_button"
                android:textOn="@string/estado_preparado"
                android:textOff="@string/estado_preparado"
                android:drawablePadding="8dp"
                android:layout_marginEnd="14dp"
                android:padding="8dp"
                android:button="@null"
                android:textColor="?attr/colorControlNormal"
                android:textAllCaps="false"
                android:checked="false"/>

            <ToggleButton
                android:id="@+id/toggleButtonRecogido"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:background="@drawable/rounded_border_button"
                android:textOn="@string/estado_recogido"
                android:textOff="@string/estado_recogido"
                android:drawablePadding="8dp"
                android:layout_marginEnd="18dp"
                android:padding="8dp"
                android:button="@null"
                android:textColor="?attr/colorControlNormal"
                android:textAllCaps="false"
                android:checked="false"/>

        </LinearLayout>
</RelativeLayout>
