<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonCancel"
                style="@style/TransparentButton"
                android:layout_width="38dp"
                android:layout_height="wrap_content"
                android:backgroundTint="#00FFFFFF"
                android:layout_marginLeft="6dp"
                android:layout_gravity="center"
                android:drawableStart="@drawable/close_24px"
                android:drawableLeft="@drawable/close_24px" />


            <EditText
                android:id="@+id/nombre"
                android:layout_width="216dp"
                android:layout_height="66dp"
                android:layout_margin="@dimen/big_padding"
                android:fontFamily="sans-serif-light"
                android:hint="@string/hint_nombre_plato"
                android:inputType="textAutoComplete"
                android:minHeight="@dimen/min_height"
                android:textSize="24sp" />

            <Button
                android:id="@+id/buttonSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:background="@drawable/rounded_button"
                android:text="@string/save"
                android:textAllCaps="false"
                android:visibility="visible" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="#CCCCCC" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iconIngredientes"
                android:layout_width="38dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/edit_note_24px" />

            <EditText
                android:id="@+id/body"
                style="@android:style/Widget.AutoCompleteTextView"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:layout_margin="@dimen/big_padding"
                android:hint="@string/hint_ingredientes_plato"
                android:inputType="textMultiLine"
                android:background="@null"
                android:scrollbars="vertical"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textSize="16sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="#CCCCCC" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iconCategorias"
                android:layout_width="38dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/category_24px" />

            <Spinner
                android:id="@+id/spinnerCategorias"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="@dimen/small_padding"
                android:spinnerMode="dropdown"
                android:textSize="16sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="#CCCCCC" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iconDinero"
                android:layout_width="38dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/euro_24px" />

            <EditText
                android:id="@+id/editPrecio"
                style="@android:style/Widget.AutoCompleteTextView"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:layout_margin="@dimen/big_padding"
                android:hint="@string/hint_precio_plato"
                android:inputType="numberDecimal"
                android:ems="10"
                android:background="@null"
                android:scrollbars="vertical"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textSize="16sp" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>
