<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonCancel"
                style="@style/TransparentButton"
                android:layout_width="38dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="6dp"
                android:backgroundTint="#00FFFFFF"
                android:drawableStart="@drawable/close_24px"
                android:drawableLeft="@drawable/close_24px" />


            <TextView
                android:id="@+id/idPedido"
                android:layout_width="216dp"
                android:layout_height="66dp"
                android:layout_margin="@dimen/big_padding"
                android:fontFamily="sans-serif-light"
                android:gravity="center_vertical"
                android:minHeight="@dimen/min_height"
                android:textSize="24sp" />

            <Button
                android:id="@+id/buttonSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@drawable/rounded_button"
                android:text="@string/save"
                android:textAllCaps="false"
                android:visibility="visible" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="#CCCCCC" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iconIngredientes"
                android:layout_width="38dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/person_24px" />

            <EditText
                android:id="@+id/editPedidoNombre"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/big_padding"
                android:background="@null"
                android:fontFamily="sans-serif-light"
                android:hint="@string/hint_nombre_cliente"
                android:scrollbars="vertical"
                android:textColor="?attr/inputTextColor"
                android:textSize="16sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="#CCCCCC" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iconTelefono"
                android:layout_width="38dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/call_24px" />

            <EditText
                android:id="@+id/editNumeroTelefono"
                style="@android:style/Widget.AutoCompleteTextView"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/big_padding"
                android:background="@null"
                android:fontFamily="sans-serif-light"
                android:hint="@string/hint_telefono_cliente"
                android:inputType="phone"
                android:scrollbars="vertical"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textSize="16sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="#CCCCCC" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iconEstado"
                android:layout_width="38dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="2dp"
                android:src="@drawable/update_24px" />

            <Spinner
                android:id="@+id/spinnerEstado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/small_padding"
                android:spinnerMode="dropdown"
                android:textSize="16sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="#CCCCCC" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iconCalendario"
                android:layout_width="38dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="14dp"
                android:src="@drawable/calendar_month_24px" />

            <Button
                android:id="@+id/buttonDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="?attr/elementBackground"
                android:text="@string/date"
                android:textAllCaps="false"
                android:visibility="visible" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="#CCCCCC" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

             <ImageView
                android:id="@+id/iconReloj"
                android:layout_width="38dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="14dp"
                android:src="@drawable/schedule_24px" />

            <Button
                android:id="@+id/buttonTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="?attr/elementBackground"
                android:text="@string/time"
                android:textAllCaps="false"
                android:visibility="visible" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="#CCCCCC" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iconPlato"
                android:layout_width="38dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="14dp"
                android:src="@drawable/restaurant_24px" />

            <Button
                android:id="@+id/addPlatoButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="?attr/elementBackground"
                android:textAllCaps="false"
                android:text="@string/add_plato_to_pedido" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerPlatosInPedido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/precioTextView"
            app:layout_constraintTop_toBottomOf="@id/addPlatoButton"
            tools:listitem="@layout/plato_item_in_pedido" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="#CCCCCC" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iconDinero"
                android:layout_width="38dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="8dp"
                android:src="@drawable/euro_24px" />

            <TextView
                android:id="@+id/precioTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/big_padding"
                android:textSize="16sp"
                android:text="TextView" />

        </LinearLayout>

    </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>>

</androidx.core.widget.NestedScrollView>
